# AdventOfCode2025

./: CMakeLists.txt  CMakePresets.json  README.md  warnings.cmake
Utils/: CMakeLists.txt  test.cpp  utils.cppm
puzzle-inputs/: .gitignore  CMakeLists.txt  getInput.cppm
solutions/: CMakeLists.txt  day1-1.cpp  day1-2.cpp  day2-1.cpp  day2-2.cpp  day3-1.cpp  day3-2.cpp  day4-1.cpp  day4-2.cpp  day5-1.cpp  day5-2.cpp  day6-1.cpp  day6-2.cpp  day7-1.cpp  day7-2.cpp  day8-1.cpp  day8-2.cpp  day9-1.cpp
