function(add_solution name)
    if(NOT IS_READABLE "${CMAKE_CURRENT_SOURCE_DIR}/${name}.cpp")
        message(FATAL_ERROR "Solution source file not found: ${name}.cpp")
    endif()

    add_executable(${name} "${name}.cpp")
    target_link_libraries(${name} PRIVATE Utils getInput)
    enable_cxx_warnings(${name})
endfunction()

add_solution(day1-1)
add_solution(day1-2)
add_solution(day2-1)
add_solution(day2-2)
add_solution(day3-1)
